@@ -3,6 +3,8 @@ SET(TELESCOPE_CONTROL_MAJOR "0")
 SET(TELESCOPE_CONTROL_MINOR "1")
 SET(TELESCOPE_CONTROL_PATCH "9")
 SET(TELESCOPE_CONTROL_VERSION "${TELESCOPE_CONTROL_MAJOR}.${TELESCOPE_CONTROL_MINOR}.${TELESCOPE_CONTROL_PATCH}")
+#Don't forget to increment the version in device_models.json too,
+#otherwise the local copy will be overwritten each time Stellarium is started.
 
 SET(USE_TOGGLEABLE_TELESCOPE_WINDOW 0 CACHE BOOL "The telescopes dialog window can be toggled with a keyboard shortcut and/or a toolbar button.")
 SET(USE_TOOLBAR_BUTTON 1 CACHE BOOL "Add a button to the bottom toolbar to toggle the telescopes dialog window.")
